# redis7.0-chinese-annotated

./: .gitignore  CMakeLists.txt  README.md  README_RAW.md  redis.conf
src/: evict.c  zmalloc.h
